[package]
name = "grandma"
version = "0.1.0"
authors = ["natanfudge <natan.lifsiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7"
walkdir = "2"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.10"
pathdiff = "0.1.0"
path-slash = "0.x"